--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/2226467ac8.js" crossorigin="anonymous"></script>
 <body>
     <header>
-        <div class="LOGO"></div>
+        <img class="LOGO" src="assets/logo.png">
         <nav>
             <ul>
                 <li>קטגוריה</li>
@@ -23,6 +23,48 @@
             <i class="fas fa-shopping-cart"></i> | <i class="far fa-star"></i>
             <div class="number">1</div>
         </div>
-    </header>  
+    </header>
+    <section class="background">
+    </section>
+    <section class="suitcases">
+        <div class="suitcase">
+            <img src="assets/product4.png">
+            <h5>שם המוצר</h5>
+            <p>150‎₪</p>
+            <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+        </div>
+        <div class="suitcase">
+            <img src="assets/product1.png">
+            <h5>שם המוצר</h5>
+            <p>150‎₪</p>
+            <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+        </div>
+        <div class="suitcase">
+            <img src="assets/product3.png">
+            <h5>שם המוצר</h5>
+            <p>150‎₪</p>
+            <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+        </div>
+        <div class="suitcase">
+            <img src="assets/product2.png">
+            <h5>שם המוצר</h5>
+            <p>150‎₪</p>
+            <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+        </div>
+        <div class="suitcase">
+            <img src="assets/product1.png">
+            <h5>שם המוצר</h5>
+            <p>150‎₪</p>
+            <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+        </div>
+        <div class="suitcase">
+            <img src="assets/product1.png">
+            <h5>שם המוצר</h5>
+            <p>150‎₪</p>
+            <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+        </div>
+        <button>לקטלוג המלא</button>
+    </section>
+      
 </body>
 </html>
