--- a/index.html
+++ b/index.html
@@ -4,108 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suitcase Store</title>
-    <link rel="stylesheet" href="https://cdn.rtlcss.com/bootstrap/v4.2.1/css/bootstrap.min.css" integrity="sha384-vus3nQHTD+5mpDiZ4rkEPlnkcyTP+49BhJ4wJeJunw06ZAp+wzzeBPUXr42fi8If" crossorigin="anonymous"></head>
+    <link rel="stylesheet" href="https://cdn.rtlcss.com/bootstrap/v4.2.1/css/bootstrap.min.css" integrity="sha384-vus3nQHTD+5mpDiZ4rkEPlnkcyTP+49BhJ4wJeJunw06ZAp+wzzeBPUXr42fi8If" crossorigin="anonymous">    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.rtlcss.com/bootstrap/v4.2.1/js/bootstrap.min.js" integrity="sha384-a9xOd0rz8w0J8zqj1qJic7GPFfyMfoiuDjC9rqXlVOcGO/dmRqzMn34gZYDTel8k" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/2226467ac8.js" crossorigin="anonymous"></script>
-<body>
+    <link rel="stylesheet" href="style.css">
+<body dir="rtl">
     <header>
-        <img class="LOGO" src="assets/logo.png">
-        <nav>
-            <ul>
-                <li>קטגוריה</li>
-                <li>קטגוריה</li>
-                <li>קטגוריה</li>
-                <li>קטגוריה</li>
-                <li>קטגוריה</li>
-            </ul>
+        <img src="assets/logo.png">
+        <nav id="navbar" class="navbar navbar-expand-lg navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">קטגוריה <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">קטגוריה</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">קטגוריה</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">קטגוריה</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">קטגוריה</a>
+                </li>
+              </ul>
+            </div>
         </nav>
-        <div>
+        <div id="userArea">
             <p>שלום Lital, [התנתק/י]</p>
-            <i class="fas fa-shopping-cart"></i> | <i class="far fa-star"></i>
+            <i class="far fa-star"></i> | <i class="fas fa-shopping-cart"></i>
             <div class="number">1</div>
         </div>
     </header>
-    <section class="background">
-    </section>
-    <section class="suitcases">
-        <div class="suitcase">
-            <img src="assets/product4.png">
-            <h5>שם המוצר</h5>
-            <p>150‎₪</p>
-            <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+    <main>
+        <div id="fighterPlane" class="backgroundImg"></div>
+        <div id="catalogDiv">
+            <h2>הנמכרים ביותר</h2>
         </div>
-        <div class="suitcase">
-            <img src="assets/product1.png">
-            <h5>שם המוצר</h5>
-            <p>150‎₪</p>
-            <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
-        </div>
-        <div class="suitcase">
-            <img src="assets/product3.png">
-            <h5>שם המוצר</h5>
-            <p>150‎₪</p>
-            <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
-        </div>
-        <div class="suitcase">
-            <img src="assets/product2.png">
-            <h5>שם המוצר</h5>
-            <p>150‎₪</p>
-            <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
-        </div>
-        <div class="suitcase">
-            <img src="assets/product1.png">
-            <h5>שם המוצר</h5>
-            <p>150‎₪</p>
-            <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
-        </div>
-        <div class="suitcase">
-            <img src="assets/product1.png">
-            <h5>שם המוצר</h5>
-            <p>150‎₪</p>
-            <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
-        </div>
-        <button>לקטלוג המלא</button>
-    </section>
-    <section class="background">
-    </section> 
-    <section class="ourBrands">
-        <h2>מותגים שלנו</h2>
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-          <img src="assets/motag.png">
-          <p>Germany since 1898</p>
-          <p>לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית. סת אלמנקום ניסי נון ניבאה. דס איאקוליס וולופטה דיאם. וסטיבולום אט דולור, קראס אגת לקטוס וואל אאוגו וסטיבולום סוליסי טידום בעליק. קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי.
-
-            קולורס מונפרד אדנדום סילקוף, מרגשי ומרגשח. עמחליף גולר מונפרר סוברט לורם שבצק יהול, לכנוץ בעריר גק ליץ, ושבעגט ליבם סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי מורגם בורק? לתיג ישבעס.</p>
-    </section>
-    <section class="background">
-    </section>
-    <section class="about">
-        <h2>קצת עלינו</h2>
-        <h5>לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית לורם איפסום דולור סיט אמט.</h5>
-        <p>לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית. סת אלמנקום ניסי נון ניבאה. דס איאקוליס וולופטה דיאם. וסטיבולום אט דולור, קראס אגת לקטוס וואל אאוגו וסטיבולום סוליסי טידום בעליק. קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי.
-            קולורס מונפרד אדנדום סילקוף, מרגשי ומרגשח. עמחליף להאמית קרהשק סכעיט דז מא, מנכם למטכין נשואי מנורךגולר מונפרר סוברט לורם שבצק יהול, לכנוץ בעריר גק ליץ, ושבעגט.</p>
-    </section>
-    <footer>
-        <h4>footer</h4>
-    </footer>
+        <div id="suitcaseBack" class="backgroundImg"></div>
+        <div id="cargoPlane" class="backgroundImg"></div>
+    </main>
 </body>
 </html>
