Added catalog and brands parts
Include style

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
         <div id="userArea">
             <p>שלום Lital, [התנתק/י]</p>
-            <i class="far fa-star"></i> | <i class="fas fa-shopping-cart"></i>
+            <i class="far fa-star" style="font-size: 20px;"></i> | <i class="fas fa-shopping-cart" style="font-size: 20px;"></i>
             <div class="number">1</div>
         </div>
     </header>
@@ -46,9 +46,77 @@
         <div id="fighterPlane" class="backgroundImg"></div>
         <div id="catalogDiv">
             <h2>הנמכרים ביותר</h2>
+            <section class="row align-items-end">
+                <div class="col-lg-2">
+                    <img src="assets/product4.png">
+                    <h6>שם המוצר</h6>
+                    <p>150‎₪</p>
+                    <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+                </div>
+                <div class="col-lg-2">
+                    <img src="assets/product1.png">
+                    <h6>שם המוצר</h6>
+                    <p>150‎₪</p>
+                    <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+                </div>
+                <div class="col-lg-2">
+                    <img src="assets/product3.png">
+                    <h6>שם המוצר</h6>
+                    <p>150‎₪</p>
+                    <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+                </div>
+                <div class="col-lg-2">
+                    <img src="assets/product2.png">
+                    <h6>שם המוצר</h6>
+                    <p>150‎₪</p>
+                    <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+                </div>
+                <div class="col-lg-2">
+                    <img src="assets/product1.png">
+                    <h6>שם המוצר</h6>
+                    <p>150‎₪</p>
+                    <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+                </div>
+                <div class="col-lg-2">
+                    <img src="assets/product1.png">
+                    <h6>שם המוצר</h6>
+                    <p>150‎₪</p>
+                    <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+                </div>
+            </section>
+            <button class="#">לקטלוג המלא</button>
         </div>
         <div id="suitcaseBack" class="backgroundImg"></div>
+        <div id="brandsDiv">
+            <h2>המותגים שלנו</h2>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                      <div id="brandOne" class="row">
+                        <img src="assets/motag.png" class="col-lg-3">
+                        <p class="col-lg-9">לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית. 
+                            סת אלמנקום ניסי נון ניבאה. דס איאקוליס וולופטה דיאם. וסטיבולום אט דולור, קראס אגת לקטוס וואל אאוגו וסטיבולום סוליסי טידום בעליק. קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי. <br><br>
+                            ושבעגט ליבם סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי מורגם בורק? לתיג ישבעס.</p>
+                        </div>
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                  <span id="icons" class="fas fa-chevron-right" aria-hidden="true"></span>
+                  <span class="sr-only">הבא</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                  <span id="icons" class="fas fa-chevron-left" aria-hidden="true"></span>
+                  <span class="sr-only">הקודם</span>
+                </a>
+            </div>
+        </div>
         <div id="cargoPlane" class="backgroundImg"></div>
+        <div id="aboutDiv">
+
+        </div>
     </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
