Added aboutUs and footer
Also changed products icons colors

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.rtlcss.com/bootstrap/v4.2.1/js/bootstrap.min.js" integrity="sha384-a9xOd0rz8w0J8zqj1qJic7GPFfyMfoiuDjC9rqXlVOcGO/dmRqzMn34gZYDTel8k" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/2226467ac8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+</head>
 <body dir="rtl">
     <header>
         <img src="assets/logo.png">
@@ -50,38 +51,50 @@
                 <div class="col-lg-2">
                     <img src="assets/product4.png">
                     <h6>שם המוצר</h6>
-                    <p>150‎₪</p>
-                    <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+                    <span class="productInfo">
+                      <p>150‎₪</p>
+                      <i class="fas fa-shopping-cart" style="color: var(--blueColor);"></i> <i class="far fa-star" style="color: gold;"></i>
+                    </span>
                 </div>
                 <div class="col-lg-2">
                     <img src="assets/product1.png">
                     <h6>שם המוצר</h6>
-                    <p>150‎₪</p>
-                    <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+                    <span class="productInfo">
+                      <p>150‎₪</p>
+                      <i class="fas fa-shopping-cart" style="color: var(--blueColor);"></i> <i class="far fa-star" style="color: gold;"></i>
+                    </span>
                 </div>
                 <div class="col-lg-2">
                     <img src="assets/product3.png">
                     <h6>שם המוצר</h6>
-                    <p>150‎₪</p>
-                    <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+                    <span class="productInfo">
+                      <p>150‎₪</p>
+                      <i class="fas fa-shopping-cart" style="color: var(--blueColor);"></i> <i class="far fa-star" style="color: gold;"></i>
+                    </span>
                 </div>
                 <div class="col-lg-2">
                     <img src="assets/product2.png">
                     <h6>שם המוצר</h6>
-                    <p>150‎₪</p>
-                    <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+                    <span class="productInfo">
+                      <p>150‎₪</p>
+                      <i class="fas fa-shopping-cart" style="color: var(--blueColor);"></i> <i class="far fa-star" style="color: gold;"></i>
+                    </span>
                 </div>
                 <div class="col-lg-2">
                     <img src="assets/product1.png">
                     <h6>שם המוצר</h6>
-                    <p>150‎₪</p>
-                    <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+                    <span class="productInfo">
+                      <p>150‎₪</p>
+                      <i class="fas fa-shopping-cart" style="color: var(--blueColor);"></i> <i class="far fa-star" style="color: gold;"></i>
+                    </span>
                 </div>
                 <div class="col-lg-2">
                     <img src="assets/product1.png">
                     <h6>שם המוצר</h6>
-                    <p>150‎₪</p>
-                    <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
+                    <span class="productInfo">
+                      <p>150‎₪</p>
+                      <i class="fas fa-shopping-cart" style="color: var(--blueColor);"></i> <i class="far fa-star" style="color: gold;"></i>
+                    </span>
                 </div>
             </section>
             <button class="#">לקטלוג המלא</button>
@@ -112,11 +125,16 @@
         </div>
         <div id="cargoPlane" class="backgroundImg"></div>
         <div id="aboutDiv">
-
+          <h2>קצת עלינו</h2>
+          <div id="aboutUs" class="row align-items-center">
+            <h6 class="col-lg-3">"לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית לורם איפסום דולור סיט אמט."</h6>
+            <p class="col-lg-9">לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית. סת אלמנקום ניסי נון ניבאה. דס איאקוליס וולופטה דיאם. וסטיבולום אט דולור, קראס אגת לקטוס וואל אאוגו וסטיבולום סוליסי טידום בעליק. קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי.   <br><br>
+                קולורס מונפרד אדנדום סילקוף, מרגשי ומרגשח. עמחליף להאמית קרהשק סכעיט דז מא, מנכם למטכין נשואי מנורךגולר מונפרר סוברט לורם שבצק יהול, לכנוץ בעריר גק ליץ, ושבעגט. ולורס מונפרד אדנדום סילקוף, מרגשי ומרגשח. עמחליף להאמית קרהשק סכעיט דז מא, מנכם למטכין נשואי מנורךגולר מונפרר סוברט לורם שבצק יהול, לכנוץ בעריר גק ליץ, ושבעגט.</p>
+          </div>
         </div>
+      <footer>
+        <h6>Footer</h6>
+      </footer>
     </main>
-    <footer>
-
-    </footer>
 </body>
 </html>
