--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </nav>
         <div id="userArea">
             <p>שלום Lital, [התנתק/י]</p>
-            <i class="far fa-star" style="font-size: 20px;"></i> | <i class="fas fa-shopping-cart" style="font-size: 20px;"></i>
+            <i class="far fa-star"></i> | <i class="fas fa-shopping-cart"></i>
             <div class="number">1</div>
         </div>
     </header>
@@ -53,7 +53,7 @@
                     <h6>שם המוצר</h6>
                     <span class="productInfo">
                       <p>150‎₪</p>
-                      <i class="fas fa-shopping-cart" style="color: var(--blueColor);"></i> <i class="far fa-star" style="color: gold;"></i>
+                      <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
                     </span>
                 </div>
                 <div class="col-lg-2">
@@ -61,7 +61,7 @@
                     <h6>שם המוצר</h6>
                     <span class="productInfo">
                       <p>150‎₪</p>
-                      <i class="fas fa-shopping-cart" style="color: var(--blueColor);"></i> <i class="far fa-star" style="color: gold;"></i>
+                      <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
                     </span>
                 </div>
                 <div class="col-lg-2">
@@ -69,7 +69,7 @@
                     <h6>שם המוצר</h6>
                     <span class="productInfo">
                       <p>150‎₪</p>
-                      <i class="fas fa-shopping-cart" style="color: var(--blueColor);"></i> <i class="far fa-star" style="color: gold;"></i>
+                      <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
                     </span>
                 </div>
                 <div class="col-lg-2">
@@ -77,7 +77,7 @@
                     <h6>שם המוצר</h6>
                     <span class="productInfo">
                       <p>150‎₪</p>
-                      <i class="fas fa-shopping-cart" style="color: var(--blueColor);"></i> <i class="far fa-star" style="color: gold;"></i>
+                      <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
                     </span>
                 </div>
                 <div class="col-lg-2">
@@ -85,7 +85,7 @@
                     <h6>שם המוצר</h6>
                     <span class="productInfo">
                       <p>150‎₪</p>
-                      <i class="fas fa-shopping-cart" style="color: var(--blueColor);"></i> <i class="far fa-star" style="color: gold;"></i>
+                      <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
                     </span>
                 </div>
                 <div class="col-lg-2">
@@ -93,7 +93,7 @@
                     <h6>שם המוצר</h6>
                     <span class="productInfo">
                       <p>150‎₪</p>
-                      <i class="fas fa-shopping-cart" style="color: var(--blueColor);"></i> <i class="far fa-star" style="color: gold;"></i>
+                      <i class="fas fa-shopping-cart"></i> <i class="far fa-star"></i>
                     </span>
                 </div>
             </section>
